call api categories, navbar categories, table products

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
+
 @font-face {
-  font-family: "Open Sans";
-  src: url("./fonts/Playa/AlegreyaSansSC-ExtraBoldItalic.ttf") format("ttf"),
-    url("./fonts/Playa/AlegreyaSansSC-ExtraBoldItalic.ttf") format("ttf");
+  font-family: "Jolly Lodger";
+  src: url("./fonts/Playa/JollyLodger-Regular.ttf") format("ttf"),
+    url("./fonts/Playa/JollyLodger-Regular.ttf") format("ttf");
   font-weight: bold;
   font-display: swap;
 }
@@ -9,6 +10,13 @@
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Open Sans";
+  font-family: "Arial";
+  font-weight: 400;
+}
+
+div.tituloEmpresa {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: "Jolly Lodger";
   font-weight: 400;
 }
