--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,24 @@
+/* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 601px) {
+  div.tituloEmpresa {
+    font-size: 50px;
+    color: black;
+    letter-spacing: 3px; 
+  }
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+  div.tituloEmpresa {
+    font-size: 30px;
+    color: black;
+  }
+}
+
 *{
   margin: 0;
   padding: 0;
+  
 }
 
 
@@ -11,9 +29,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: "#f5f5f5";
 }
 
 code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+footer {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
