--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: "Jolly Lodger";
   src: url("./fonts/Playa/JollyLodger-Regular.ttf") format("ttf"),
@@ -15,6 +14,13 @@
 }
 
 div.tituloEmpresa {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: "Jolly Lodger";
+  font-weight: 400;
+}
+
+div.tituloCategoria {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Jolly Lodger";
